--- a/INDEXpx.html
+++ b/INDEXpx.html
@@ -29,6 +29,13 @@
       .front-section .row{
         height:600px;
       }
+      .bg-last{
+        background-color: #000639 !important;
+      }
+      img.img8{
+        object-fit: cover;
+        object-position: center center;
+      }
     </style>
   </head>
   <body>
@@ -207,16 +214,39 @@
 
     <!--Earth Container-->
     <div class="container-fluid py-5 bg-light">
-      <div class="row">
-        <div class="col-8 pl-5">
+      <div class="row mx-5">
+        <div class="col-8 pl-2">
           <h1>Empowering independent business owners everywhere</h1>
         </div>
       </div>
-      <div class="row">
-        <div class="col-5 pl-5">
+      <div class="row mx-5">
+        <div class="col-5 pl-2">
           <h5>Shopify businesses around the world have made over $100 billion in sales</h5>
         </div>
       </div>
+      <div class="row mx-5">
+        <div class="col-3 align-self-end pl-5">
+          <p><small>The orders in this map do not reflect live results, but are generated from a simulation of the last reported quarter’s orders.</small></p>
+        </div>
+            <div class="col-6">
+            <img src="./earth.png">
+        </div>
+      </div>
+
+      <div class="row mx-5">
+        <div class="col-md-6 col-12 text-center pr-0" style="height:636px">
+          <img src="./img8.jpg" class="h-100 w-100 img8" >
+        </div>
+        <div class="col-md-6 col-12 text-center bg-last text-white" >
+          <p></p>
+         <h3>“We’ve been able to build something in 3 years that a lot of brands haven’t actually gotten to in 10 years.”</h3>
+         <img src="./logo3.png" class="d-block mx-auto">
+         <h4>Chioma, Cee Cee’s Closet—New York</h4>
+         <button type="button" class="btn btn-outline-light">Play Chioma and Uchenna's story</button>
+      </div>
+
+
+
     </div>
 
     <!-- Optional JavaScript -->
